<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="addHabbitViewModel"
                  type="com.example.habbit.AddHabbitViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/habit_text" android:hint="@string/habit_name" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:maxLength="12"/>

        <ScrollView android:layout_width="match_parent" android:layout_height="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.495"
                    android:id="@+id/scrollView2"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.442"
                    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
                    app:layout_constraintTop_toBottomOf="@+id/habit_text" android:layout_marginTop="8dp">
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:gravity="center_horizontal">
                <com.thebluealliance.spectrum.SpectrumPalette
                        android:id="@+id/color_palette"
                        android:layout_width="171dp"
                        android:layout_height="wrap_content"
                        app:spectrum_columnCount="3"
                        app:spectrum_colors="@array/picker_colors"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/habit_text" android:layout_marginEnd="8dp"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent"/>

                <CheckBox
                        android:layout_width="137dp"
                        android:layout_height="65dp" android:id="@+id/checkBox"
                        android:text="@string/checkbox_traking"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/color_palette"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp"/>
                <Button
                        android:text="@string/button_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/addhabit_button" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/checkBox" app:layout_constraintVertical_bias="0.93"
                        />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>